# Heimdall-RS

./: Cargo.toml  config.toml
api/: Cargo.toml
api/src/: character_server.rs  codec.rs  error.rs  lib.rs  map_server.rs  pincode.rs  utils.rs
api/src/account/: db.rs  mmo_account.rs  mod.rs
api/src/character/: attributes.rs  client.rs  codec.rs  db.rs  error.rs  mod.rs  request.rs  response.rs  server.rs
api/src/config/: login.rs  mod.rs
api/src/inventory/: item.rs  mod.rs
api/src/login/: codec.rs  response.rs
api/src/map/: mod.rs
character/: Cargo.toml  config.toml
character/src/: authentication_db.rs  config.rs  main.rs  server.rs  session.rs
databases/: Cargo.toml
databases/src/: authentication.rs  lib.rs
databases/src/account/db/: in_memory.rs  mod.rs
databases/src/character/: in_memory.rs  mod.rs
databases/src/inventory/: in_memory.rs  mod.rs
login/: Cargo.toml  config.toml
login/src/: agent.rs  main.rs  server.rs
resources/: maps.yaml
src/: config.rs  login_server.rs  main.rs
src/account/: mmo_account.rs  mod.rs
src/account/db/: in_memory.rs  mod.rs
src/api/: mod.rs
src/api/character/: mod.rs
src/api/login/: codec.rs  credentials.rs  error.rs  mod.rs  request.rs  response.rs
src/session/: mod.rs
