[package]
name = "databases"
version = "0.1.0"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-std = "1.8"
chrono = "0.4"
fastrand = "1.4"
thiserror = "1.0"
tracing = "0.1"

api = { path = "../api" }